Prevent date wrapping in event timing blocks

--- a/_sass/components/_boxes.scss
+++ b/_sass/components/_boxes.scss
@@ -170,7 +170,7 @@ p.color-interview {
   }
 
   blockquote.event-timing {
-    max-width: 200px;
+    max-width: 220px;
     h3.event-meta { margin-top: 0px; margin-bottom: 10px; }
     padding: 10px;
     background-color: #F9F9F9;
